--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TBATYOF</title>
-    <link rel="stylesheet" href="C:\Users\和尋\Desktop\web-page\HTML&CSS初級\stylesheet.css">
+    <link rel="stylesheet" href="https://github.com/TBTYOF/HTML_-_CSS_TR/blob/master/stylesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="C:\Users\和尋\Desktop\web-page\HTML&CSS初級\responsive.css">
   </head>
